--- a/data-product-ui/Dockerfile
+++ b/data-product-ui/Dockerfile
@@ -1,11 +1,11 @@
 # syntax=docker.io/docker/dockerfile:1
 
-FROM node:18-alpine AS base
+# Chainguard/Wolfi Node (minimal, frequently zero-CVE); pinned digest
+FROM cgr.dev/chainguard/node@sha256:4c0ecb7ed824dca4a8031fe90810134b63c15e4f4d943cf2845cff4c819c8a85 AS base
 
 # Install dependencies only when needed
 FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+USER root
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
@@ -20,6 +20,7 @@ RUN \
 
 # Rebuild the source code only when needed
 FROM base AS builder
+USER root
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
@@ -38,7 +39,11 @@ RUN \
 
 # Production image, copy all the files and run next
 FROM base AS runner
+USER root
 WORKDIR /app
+
+# Remove npm tooling from runtime image (should be minimal already)
+RUN rm -rf /usr/local/lib/node_modules/npm /usr/local/bin/npm /usr/local/bin/npx || true
 
 ENV NODE_ENV=production \
     NEXT_TELEMETRY_DISABLED=1 \
@@ -47,23 +52,11 @@ ENV NODE_ENV=production \
 # Uncomment the following line in case you want to disable telemetry during runtime.
 # ENV NEXT_TELEMETRY_DISABLED=1
 
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
-COPY --from=builder /app/public ./public
-
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
-USER nextjs
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
 
 EXPOSE 3000
-
 ENV PORT=3000
-
-# server.js is created by next build from the standalone output
-# https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
-ENV HOSTNAME="0.0.0.0"
 CMD ["node", "server.js"]
